--- a/marvel/src/components/Header/header.css
+++ b/marvel/src/components/Header/header.css
@@ -23,3 +23,16 @@ header{
   color: #000000;
   border-radius: 4px;
 }
+
+.search{
+   height: 35px;
+   border-radius: 3px;
+   border: 2px solid #B41F23;
+}
+
+.icons{
+  display: flex;
+  flex-direction: row;
+  margin: 3px;
+}
+
