--- a/marvel/src/index.css
+++ b/marvel/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color:  gray;
 }
 
 code {
@@ -17,6 +18,8 @@ code {
   margin: 0;
   box-sizing: border-box;
 }
+
+
 
 .app{
   display: flex;
